# rust-subscriber

./: Cargo.toml  Dockerfile  build.sh
src/: main.rs
