[package]
name = "rust-subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.10"
tokio = { version = "1.21.0", features = ["full"] }
rdkafka = "0.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
